Fixed home page layout issues

--- a/src/App.css
+++ b/src/App.css
@@ -1,19 +1,28 @@
 .background {
     background: linear-gradient(rgba(0, 39, 11, 0.595), rgba(22, 0, 0, 0.8)), url('./assets/home-wallpaper.jpg');
-    width: 100vh;
     height: 750px;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+    position:relative;
 }
 
-.main-text {
+.logo {
     position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    color: white;
-    text-align: center;
+    top: 5%;
+    left: 15%;
+}
+
+.header-buttons {
+    position: absolute;
+    top: 5%;
+    left: 75%
+}
+
+.register-main {
+    position: absolute;
+    top: 40%;
+    left: 25%;
 }
 
 .loader {
